--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,10 @@
 version: 0.2
 
 
+env:
+  parameter-store:
+      JWT_SECRET: JWT_SECRET
+
 phases:
   install:
     commands:
@@ -35,3 +39,4 @@ phases:
       - ls
 artifacts:
   files: build.json
+
