--- a/aws-auth-cm.yaml
+++ b/aws-auth-cm.yaml
@@ -4,8 +4,8 @@ metadata:
   name: aws-auth
   namespace: kube-system
 data:
-  mapRoles: 
-    - rolearn: arn:aws:iam::687627035326:role/eksctl-simple-jwt-api-nodegroup-n-NodeIn    stanceRole-1U0V0XFJB46D0
+  mapRoles: |
+    - rolearn: arn:aws:iam::<ACCOUNT_ID>:role/UdacityFlaskDeployCBKubectlRole
       username: system:node:{{EC2PrivateDNSName}}
       groups:
         - system:bootstrappers
