--- a/aws-auth-cm.yaml
+++ b/aws-auth-cm.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: kube-system
 data:
   mapRoles: |
-    - rolearn: arn:aws:iam::<ACCOUNT_ID>:role/UdacityFlaskDeployCBKubectlRole
+    - rolearn: arn:aws:iam::687627035326:role/UdacityFlaskDeployCBKubectlRole
       username: system:node:{{EC2PrivateDNSName}}
       groups:
         - system:bootstrappers
